<resources>
    <string name="app_name">Focus</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="list">清单</string>
    <string name="my">我的</string>
    <string name="todotask">待办任务</string>
    <string name="donetask">已完成任务</string>
    <string name="statistics">统计</string>
    <string name="account">账号</string>
    <string name="tag">标签</string>
    <string name="tag_work">#工作</string>
    <string name="tag_learn">#学习</string>
    <string name="tag_live">#生活</string>
    <string name="log_out">退出登录</string>
    <string name="todaytodo">今日待办</string>
    <string name="inbox">收件箱</string>
    <string name="addtask">添加任务</string>
    <string name="ok">确定</string>
    <string name="cancel">取消</string>
    <string name="taskdetail">任务详情</string>
    <string name="more">更多</string>
    <string name="pomodoro">番茄钟</string>
    <string name="startfocus">开始专注</string>
    <string name="startpomodoro">开始番茄钟</string>
    <string name="delete">删除</string>
    <string name="addsubtask">添加子任务</string>
    <string name="addtaskdescription">添加任务描述...</string>
    <string name="done">已完成</string>
    <string name="yuyinhint">请开始说话...</string>
    <string name="yuyinexample">例如：去图书馆借书</string>
    <string name="title_activity_login">Sign in</string>




    <!-- Strings related to login -->
    <string name="prompt_phone">手机号</string>
    <string name="prompt_password">密码</string>
    <string name="confirmpassword">确认密码</string>
    <string name="action_sign_in">登录</string>
    <string name="error_invalid_phone">手机号码格式不正确</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">密码不正确</string>
    <string name="error_field_required_phone">请输入手机号</string>
    <string name="error_field_required_password">请输入密码</string>
    <string name="error_confirmpassword">两次密码输入不一致</string>
    <string name="error_empty_username">请输入用户名</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="noAccount">没有账号？立即注册</string>
    <string name="register">注册</string>
    <string name="code">验证码</string>
    <string name="get_code">获取验证码</string>
    <string name="next_step">下一步</string>
    <string name="finish">完成</string>
    <string name="username">用户名</string>
</resources>
