<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <item
        android:id="@+id/action_more"
        android:icon="@drawable/ic_more"
        android:orderInCategory="1"
        android:title="@string/more"
        app:showAsAction="ifRoom">

        <menu>
            <group>
                <item
                    android:id="@+id/action_pomodoro"
                    android:orderInCategory="2"
                    android:title="@string/startpomodoro"
                    app:showAsAction="ifRoom" />
                <item
                    android:id="@+id/action_delete"
                    android:orderInCategory="3"
                    android:title="@string/delete"
                    app:showAsAction="ifRoom" />
            </group>
        </menu>
    </item>
</menu>
