<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/white"
    android:focusable="true"
    android:focusableInTouchMode="true"
    android:orientation="vertical"
    tools:context="com.example.yunzhao.focus.TaskdetailActivity">

    <android.support.design.widget.AppBarLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:theme="@style/AppTheme.AppBarOverlay">

        <android.support.v7.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@android:color/white"
            app:navigationIcon="@drawable/ic_back"
            app:popupTheme="@style/OverflowMenuStyle"
            app:titleTextColor="@android:color/black">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/taskdetail"
                android:textColor="@android:color/black"
                android:textSize="@dimen/title_text_size" />
        </android.support.v7.widget.Toolbar>
    </android.support.design.widget.AppBarLayout>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="54dp"
                    android:layout_height="54dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <CheckBox
                        android:id="@+id/checkbox"
                        android:layout_width="30dp"
                        android:layout_height="30dp"
                        android:buttonTint="@android:color/black"
                        android:gravity="center"
                        android:scaleX="0.8"
                        android:scaleY="0.8" />
                </LinearLayout>

                <EditText
                    android:id="@+id/et_taskname"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:maxLines="1"
                    android:textColor="@android:color/black"
                    android:textSize="@dimen/normal_text_size" />


                <CheckBox
                    android:id="@+id/istodaytask"
                    android:layout_width="28dp"
                    android:layout_height="28dp"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:background="@drawable/checkbox_istoday"
                    android:button="@null"
                    android:focusable="false"
                    android:focusableInTouchMode="false" />
            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dividergrey" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="54dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="54dp"
                    android:layout_height="54dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="25dp"
                        android:layout_height="25dp"
                        android:background="@drawable/ic_addsubtask"
                        android:padding="10dp" />
                </LinearLayout>

                <EditText
                    android:id="@+id/et_subtask"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:background="@null"
                    android:gravity="center_vertical"
                    android:hint="@string/addsubtask"
                    android:lines="1"
                    android:singleLine="true"
                    android:imeOptions="actionDone"
                    android:textSize="@dimen/normal_text_size" />

            </LinearLayout>

            <com.example.yunzhao.focus.widget.MyListView2
                android:id="@+id/subtask_listview"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:divider="@null"/>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dividergrey"
                android:layout_marginTop="15dp"/>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <LinearLayout
                    android:layout_width="54dp"
                    android:layout_height="54dp"
                    android:gravity="center"
                    android:orientation="vertical">

                    <ImageView
                        android:layout_width="20dp"
                        android:layout_height="20dp"
                        android:background="@drawable/ic_description"
                        android:padding="10dp" />
                </LinearLayout>

                <EditText
                    android:id="@+id/et_taskdescription"
                    android:layout_width="match_parent"
                    android:layout_height="200dp"
                    android:layout_marginRight="@dimen/activity_horizontal_margin"
                    android:background="@null"
                    android:gravity="start"
                    android:hint="@string/addtaskdescription"
                    android:paddingRight="@dimen/activity_horizontal_margin"
                    android:paddingTop="17dp"
                    android:textSize="@dimen/normal_text_size" />

            </LinearLayout>

            <View
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:background="@color/dividergrey" />


        </LinearLayout>
    </ScrollView>
</LinearLayout>
